WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303127
Fix viewport calculation by walking up ancestor tree to find nearest <svg>
https://bugs.webkit.org/show_bug.cgi?id=303127
Summary
Fix viewport calculation by walking up ancestor tree to find nearest <svg>
Ahmad Saleem
Reported
2025-11-26 00:15:26 PST
ssia - we still don't progress WPT but we are now close - floating point rocks!
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-26 00:15:33 PST
<
rdar://problem/165431008
>
Ahmad Saleem
Comment 2
2025-11-26 00:18:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54472
EWS
Comment 3
2025-12-09 18:38:14 PST
Committed
304197@main
(aa1b9b223e97): <
https://commits.webkit.org/304197@main
> Reviewed commits have been landed. Closing PR #54472 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug